# Commit-IA

./: .dockerignore  .gitignore  README.md  build-all.sh  build.sh  docker-compose.yml  go.mod  go.sum  install.bat  install.sh  main.go  makefile  package-lock.json  package.json
api/: go.mod  main.go
bot/: Dockerfile  pyproject.toml  requirements.txt
bot/app/: main.py
bot/app/routes/: router.py
bot/app/routes/anality_commit/: anality_commit_routes.py
bot/app/schemas/: schemas.py
bot/app/services/: bot_models.py  llm_base.py
bot/app/services/agents/: anality_message_commit.py
bot/app/tools/: read_commit_config.py
cmd/: go.mod  go.sum  main.go
cmd/bot/: request_bot.go
cmd/data/: settings.json
cmd/global/: constants.go  provider.go
cmd/prompt/: prompt.go
cmd/schema/: schema.go
cmd/services/: configLocalLLM.go  config_local_llm.go  createCommitMessage.go  find_provider.go  firstTimeSetup.go  first_time_setup.go  getServiceUrl.go  get_service_url.go  localCommitAnalyzer.go  local_commit_analyzer.go  requestBot.go  request_bot.go  updateConfig.go  updateConfigHelpers.go  update_config.go  update_config_helpers.go
cmd/services/cli/: executeCli.go  execute_cli.go
cmd/services/configPath/: getFilePath.go  loadConfig.go  saveConfig.go
cmd/stack_project/: stack_project.go
cmd/tools/: createRemoteConfig.go  create_remote_config.go  format_diff.go  getProjectPath.go  runGitDiff.go  run_git_diff.go  typeCmd.go  type_cmd.go
cmd/typecmd/: typecmd.go
scripts/: build-releases.sh  build_unix.sh  build_windows.bat  install.bat  install.sh
(+15 files in other folders)
