[project]
name = "commit-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.11.0",
    "langchain>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.13",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.1",
]
